Add content positioning in flip component.

--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,16 @@
 <html>
   <head>
     <link rel="module" href="/js/splitflap.js"/>
-    <link rel="stylesheet" href="/css/splitflap.css"
+    <link rel="stylesheet" href="/css/splitflap.css">
   </head>
   <body>
     <h1>Here be the demo</h1>
     <div class="flip" onClick="flip(this)">
       <div class="flap flap-top">
-	A
+	<div>8</div>
       </div>
       <div class="flap flap-bottom">
-	A
+	<div>8</div>
       </div>
     </div>
     <script>
